[package]
name = "falco-rs"
version = "0.1.0"
authors = ["Lorenzo Fontana <lo@linux.com>"]
edition = "2018"
publish = false

[lib]
name = "protos"
path = "src/protos/mod.rs"

[dependencies]
grpcio = { version = "0.4.7", features = ["openssl"] }
futures = "^0.1.15"
protobuf = "~2"
log = "0.4"

[build-dependencies]
protoc-grpcio = "1.0.2"
