[package]
name = "falco"
version = "0.0.0"
authors = ["Lorenzo Fontana <lo@linux.com>", "Leonardo Di Donato <leodidonato@gmail.com>"]
edition = "2018"
publish = false

[dependencies]
grpcio = { version = "0.4.7", features = ["openssl"] }
futures = "^0.1.15"
protobuf = "~2"
log = "0.4"

[build-dependencies]
protoc-grpcio = "1.0.2"
