[package]
name = "falco"
version = "0.0.0"
authors = ["Lorenzo Fontana <lo@linux.com>", "Leonardo Di Donato <leodidonato@gmail.com>"]
edition = "2018"
publish = true
homepage = "https://github.com/falcosecurity/client-rs"
documentation = "https://docs.rs/falco"
description = "The rust language implementation of the Falco client."
license = "Apache-2.0"
keywords = ["falco", "falcosecurity", "kubernetes", "security"]

[dependencies]
grpcio = { version = "0.4.7", features = ["openssl"] }
failure = "0.1"
futures = "^0.1.29"
protobuf = "~2.17"
log = "0.4"
serde = "1.0"
serde_derive = "1.0"

[dev-dependencies]
protobuf-codegen = "~2.17"
grpcio-compiler = "*"
